# archgw

./: .buildinfo  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  archgw.code-workspace  build_filter_image.sh  index.html  objects.inv  search.html  searchindex.js  sitemap.xml
.github/workflows/: docker-push-main.yml  docker-push-release.yml  docker-push.yml  e2e_archgw.yml  e2e_model_server.yml  e2e_test_demos.yml  e2e_tests.yml  model-server-tests.yml  validate_arch_config.yml
_static/: documentation_options.js  pygments.css
arch/: Dockerfile  arch_config_schema.yaml  docker-compose.dev.yaml  envoy.template.yaml  validate_arch_config.sh
arch/tools/: README.md  pyproject.toml
arch/tools/cli/: config_generator.py  consts.py  core.py  docker_cli.py  main.py  targets.py  utils.py
build_with_arch/: agent.html  multi_turn.html  rag.html
concepts/: llm_provider.html  prompt_target.html
concepts/tech_overview/: error_target.html  listener.html  model_serving.html  prompt.html  request_lifecycle.html  tech_overview.html  terminology.html  threading_model.html
crates/common/: Cargo.toml
demos/currency_exchange/: arch_config.yaml
demos/currency_exchange_ollama/: arch_config.yaml  docker-compose_honeycomb.yaml
demos/insurance_agent/: arch_config.yaml
demos/llm_routing/: README.md
demos/multi_turn_rag_agent/: arch_config.yaml
demos/stock_quote/: docker-compose.yaml
demos/use_cases/orchestrating_agents/: Dockerfile  arch_config.yaml  docker-compose.yaml  main.py  pyproject.toml
demos/use_cases/orchestrating_agents/hurl_tests/: simple.hurl  simple_issues_repairs.hurl  simple_stream.hurl
demos/weather_forecast/: arch_config.yaml
docs/source/: conf.py  index.rst
get_started/: intro_to_arch.html  overview.html  quickstart.html
guides/: agent_routing.html  function_calling.html  prompt_guard.html
guides/observability/: tracing.html  (+3 more)
model_server/: pyproject.toml
model_server/src/: cli.py  main.py
model_server/src/commons/: globals.py  utils.py
model_server/src/core/: function_calling.py  guardrails.py
model_server/src/core/utils/: hallucination_utils.py  model_utils.py
model_server/tests/: test_app.py
model_server/tests/core/: test_function_calling.py  test_guardrails.py  test_state.py
resources/: configuration_reference.html
(+108 files in other folders)
