[tool.poetry]
name = "archgw_modelserver"
version = "0.2.1"
description = "A model server for serving models"
authors = ["Katanemo Labs, Inc <info@katanemo.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.115.0"
torch = "2.4.1"
uvicorn = "0.31.0"
transformers = "^4.37.0"
accelerate = "^1.0.0"
pydantic = "^2.10.1"
dateparser = "*"
openai = "^1.50.2"
httpx = "0.27.2" # https://community.openai.com/t/typeerror-asyncclient-init-got-an-unexpected-keyword-argument-proxies/1040287
pytest-asyncio = "*"
pytest = "*"
opentelemetry-api = "^1.28.0"
opentelemetry-sdk = "^1.28.0"
opentelemetry-exporter-otlp = "^1.28.0"
opentelemetry-instrumentation-fastapi = "^0.49b0"
overrides = "^7.7.0"
pytest-retry = "^1.6.3"
pytest-httpserver = "^1.1.0"

[tool.poetry.scripts]
archgw_modelserver = "src.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test*.py"]
addopts = ["-v", "-s"]
retries = 2
retry_delay = 0.5
cumulative_timing = false
