[tool.poetry]
name = "api-server"
version = "0.1.0"
description = ""
authors = ["Adil Hafeez <info@katanemo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.4"
pyyaml = "^6.0.2"
uvicorn = "^0.34.0"
openai = "^1.66.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
api-server = "api_server.main:app"
